k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtm-ingress
  namespace: rtm-client-environment
spec:
  rules:
  - host: "careerbot.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chatbot-client-service
            port:
              number: 5173
  - host: "dashboard.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dashboard-client-service
            port:
              number: 5174
